--- a/Api-Automation/pom.xml
+++ b/Api-Automation/pom.xml
@@ -38,7 +38,17 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
+		<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.17.1</version>
+</dependency>
 
+<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20240303</version>
+	</dependency>
     </dependencies>
 
     <build>
