--- a/IRCTC_Testing/pom.xml
+++ b/IRCTC_Testing/pom.xml
@@ -3,12 +3,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <!-- MUST BE FIRST -->
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.irctc.testing</groupId>
     <artifactId>IRCTC_Testing</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+
+    <!-- ✅ Java version MUST be inside properties -->
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
 
@@ -26,6 +32,7 @@
             <version>7.14.0</version>
         </dependency>
 
+        <!-- Cucumber TestNG -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
@@ -40,7 +47,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- WebDriver Manager -->
+        <!-- WebDriverManager -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
@@ -52,11 +59,27 @@
     <build>
         <plugins>
 
-            <!-- Required to run TestNG with Maven -->
+            <!-- Maven Compiler Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+
+            <!-- Surefire (TestNG runner) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Runner.java</include>
+                    </includes>
+                </configuration>
             </plugin>
 
         </plugins>
